Make Element#innerText to collapse white spaces after <br>

This patch makes Element#innerText to collapse white space after <br> to avoid
emitting extra space for improving interop.

Bug: 892491
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: I8dd429a8af6ecd2e6d5195d6a6ec7b0214c6345c
Reviewed-on: https://chromium-review.googlesource.com/c/1263638
Reviewed-by: Yoichi Osato <yoichio@chromium.org>
Commit-Queue: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597004}
Former-commit-id: dcbec5e8829fe152c981265094c1b7fc35f9274d